// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c0 {
  padding: 4px;
  border-radius: 10px;
  background: #0c0c0c;
  margin: 10px auto;
  max-width: 80%;
  width: 100%;
}

.c1 {
  background: #0078d7;
  border-radius: 5px;
  max-width: 100%;
  height: 6px;
  width: 20%;
  -webkit-transition: width 0.5s ease-in-out,background 0.5s linear;
  transition: width 0.5s ease-in-out,background 0.5s linear;
  position: relative;
  overflow: hidden;
}

.c1:before {
  display: block;
  content: ' ';
  background: linear-gradient(to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.35) 50%,rgba(255,255,255,0) 100%);
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100px;
  -webkit-animation: gdzmdV 2s ease-in-out infinite;
  animation: gdzmdV 2s ease-in-out infinite;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;

exports[`renders correctly when complete 1`] = `
.c0 {
  padding: 4px;
  border-radius: 10px;
  background: #0c0c0c;
  margin: 10px auto;
  max-width: 80%;
  width: 100%;
}

.c1 {
  background: #23EB87;
  border-radius: 5px;
  max-width: 100%;
  height: 6px;
  width: 20%;
  -webkit-transition: width 0.5s ease-in-out,background 0.5s linear;
  transition: width 0.5s ease-in-out,background 0.5s linear;
  position: relative;
  overflow: hidden;
}

.c1:before {
  display: block;
  content: ' ';
  background: linear-gradient(to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.35) 50%,rgba(255,255,255,0) 100%);
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100px;
  -webkit-animation: gdzmdV 2s ease-in-out infinite;
  animation: gdzmdV 2s ease-in-out infinite;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;
